# machdoch

./: .gitignore  RALPH_CODE_IMPROVEMENT_NOTES.md  RALPH_REFACTOR_NOTES.md  README.md  components.json  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  ralph-progress.md  tsconfig.json  tsconfig.spec.json  tsconfig.test.json  tsconfig.ui.json  tsconfig.ui.test.json  vite.ui.config.ts  vitest.config.ts  vitest.ui.config.ts
.github/workflows/: installer.yml  release.yml
.machdoch/: config.json  instructions.md
.machdoch/instructions/: security.instructions.md
.machdoch/prompts/: debug-build.prompt.md
.machdoch/skills/browser-automation/: SKILL.md
docs/: encrypted-settings-file-transfer.md  local-settings-sharing-design.md  mcp-consumer-system-spec.md  media-studio-flow-system-spec.md  media-studio-model-addons-system-spec.md  provider-instruction-mcp-enrollment-system-spec.md  ralph-flow-spec.md  refactor-audit-notes.md
scripts/: build-cli-bundle.mjs  bump-version.mjs  generate-runtime-contract.mjs
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/python/: media_diffusers_requirements.txt  media_diffusers_worker.py
src-tauri/src/: atomic_file.rs  cooperative_file_lock.rs  desktop_shell.rs  desktop_task.rs  launcher.rs  lib.rs  main.rs  remote_control.rs  runtime_contract_generated.rs  runtime_snapshot.rs  shared_cli.rs  shell_state.rs  ui_control.rs  ui_operation.rs  voice.rs
src-tauri/src/desktop_shell/: codex_storage.rs  shortcut.rs  startup.rs  tray.rs  window.rs
src-tauri/src/desktop_task/: attachment_paths.rs  attachments.rs  cli_commands.rs  commands.rs  diagnostics.rs  dropped_paths.rs  file_changes.rs  paths.rs  payload.rs  payload_files.rs  process.rs  progress.rs  ralph.rs  ralph_media_bridge.rs  registry.rs
src-tauri/src/media/: analysis.rs  catalog.rs  civitai_addon.rs  database.rs  error.rs  executor.rs  exporting.rs  flow.rs  hardware.rs  ingest.rs  local_flow.rs  mod.rs  model_addon.rs  model_import.rs  model_install.rs  provider_local_diffusers.rs  provider_mock.rs  provider_openai.rs  provider_svg.rs  subject_cutout.rs  svg.rs  transform.rs
src-tauri/src/remote_control/: auth.rs  command_kinds.rs  command_tests.rs  commands.rs  config.rs  http.rs  mission_control_html.rs  mission_control_script_events.rs  mission_control_script_render.rs  pairing.rs  sanitize.rs  session.rs  shell.rs  state.rs  state_progress.rs  state_store.rs  status.rs  test_support.rs  tests.rs  web.rs
src-tauri/src/runtime_snapshot/: collect.rs  desktop_settings_commands.rs  env.rs  env_commands.rs  env_dotenv.rs  env_paths.rs  mcp_config.rs  model_catalog.rs  settings.rs  settings_commands.rs  settings_types.rs  types.rs  user_config.rs  workspace.rs
src-tauri/src/runtime_snapshot/model_catalog/: claude_cli.rs  codex_cli.rs  command.rs  command_tests.rs  copilot_cli.rs  normalize.rs  provider_api.rs  provider_api_types.rs  tests.rs
src-tauri/src/settings_transfer/: categories.rs  contract.rs  discovery.rs  encrypted_file.rs  mod.rs  protocol.rs  service.rs  session.rs  transaction.rs
src-tauri/src/ui_control/: bridge.rs  capture.rs  input.rs  windows.rs
src-tauri/src/voice/: common.rs  google.rs  google_response.rs  mod.rs  openai.rs
src/cli/: app.spec.ts  app.ts  main.ts
src/cli/_helpers/: cli-args-constants.ts  cli-args-types.ts  cli-args.spec.ts  cli-args.ts  cli-help-text.ts  cli-instruction-commands.spec.ts  cli-instruction-commands.ts  cli-interview-commands.ts  cli-io.spec.ts  cli-io.ts  cli-mcp-commands.ts  cli-mcp-lifecycle-commands.ts  cli-output.ts  cli-provider-sync-commands.spec.ts  cli-provider-sync-commands.ts  cli-ralph-commands.spec.ts  cli-ralph-commands.ts  cli-scheduler-commands.spec.ts  cli-scheduler-commands.ts  cli-scheduler-fleet.spec.ts  cli-startup-summary.spec.ts  cli-startup-summary.ts  cli-summary-commands.ts  cli-task-run.spec.ts  cli-task-run.ts  create-parsed-cli-args.helper.ts  create-scheduler-cli-options.helper.spec.ts  create-scheduler-cli-options.helper.ts  parse-cli-primitive.helper.spec.ts  parse-cli-primitive.helper.ts  provider-enrollment-cli-args.spec.ts
src/common/_components/: status-badge.tsx
src/common/_helpers/: normalize-optional-string.spec.ts  normalize-optional-string.ts  sort-entry-names.ts
src/core/: agent-runtime.ts  config.spec.ts  config.ts  customizations.spec.ts  customizations.ts  env.spec.ts  env.ts  execution.spec.ts  execution.ts  frontmatter.spec.ts  frontmatter.ts  instructions.spec.ts  instructions.ts  memory-consolidation.spec.ts  memory-consolidation.ts  memory.spec.ts  memory.ts  model-capabilities.spec.ts  model-capabilities.ts  policy.spec.ts  policy.ts  prompt-resolution.spec.ts  prompt-resolution.ts  provider-model-registry.spec.ts  provider-model-registry.ts  ralph-generation.ts  ralph-layout.spec.ts  ralph-layout.ts  ralph-starter-flow-upgrades.spec.ts  ralph-starter-flows.spec.ts  ralph-starter-flows.ts  ralph-watches.spec.ts  ralph-watches.ts  ralph.spec.ts  ralph.ts  reasoning-modes.spec.ts  reasoning-modes.ts  review-model.spec.ts  review-model.ts  runtime-contract.generated.spec.ts  (+20 more)
src/core/__test__/: ralph-decision.spec.ts  ralph-generation.spec.ts  ralph-layout.spec.ts  ralph-run.spec.ts  ralph-storage.spec.ts  ralph-test-helpers.ts  (+4 more)
src/helpers/: normalize-model-id.helper.spec.ts  normalize-model-id.helper.ts  normalize-optional-string.helper.spec.ts  normalize-optional-string.helper.ts  normalize-string-list.helper.spec.ts  normalize-string-list.helper.ts  sort-entry-names.helper.spec.ts
src/shared/: runtime-config.schema.json
(+664 files in other folders)
