[package]
name = "machdoch"
version = "0.18.0"
description = "Local-first OS AI agent desktop shell"
authors = ["machdoch contributors"]
edition = "2021"

[lib]
name = "machdoch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
async-stream = "0.3"
axum = "0.8"
enigo = "0.6.1"
getrandom = "0.3"
image = { version = "0.25", default-features = false, features = ["png"] }
qrcode = { version = "0.14.1", default-features = false, features = ["svg"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2.11", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2.7"
tauri-plugin-global-shortcut = "2"
tauri-plugin-mcp-bridge = "0.11.2"
tauri-plugin-opener = "2.5"
tauri-plugin-store = "2.4"
tokio = { version = "1", features = ["net", "sync", "time"] }
xcap = "0.9.4"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Console",
  "Win32_System_Threading",
  "Win32_UI_Shell",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
