[package]
name = "machdoch"
version = "0.36.0"
description = "Local-first OS AI agent desktop shell"
authors = ["machdoch contributors"]
edition = "2021"

[lib]
name = "machdoch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
argon2 = { version = "0.5.3", default-features = false, features = ["alloc", "zeroize"] }
base64 = "0.22"
async-stream = "0.3"
axum = "0.8"
chacha20poly1305 = { version = "0.11.0", default-features = false, features = ["alloc", "zeroize"] }
chrono = { version = "0.4.44", default-features = false, features = ["clock", "serde"] }
enigo = "0.6.1"
getrandom = "0.3"
github-copilot-sdk = { version = "=1.0.7-preview.2", default-features = false }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
mdns-sd = "=0.20.1"
network-interface = "=2.0.5"
ort = "=2.0.0-rc.12"
qrcode = { version = "0.14.1", default-features = false, features = ["svg"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
resvg = { version = "0.47.0", default-features = false, features = ["system-fonts", "text"] }
roxmltree = "0.21.1"
# rusqlite 0.40.1 unconditionally uses `#![feature(cfg_select)]`, which is
# rejected by the stable Rust toolchain used for releases.
rusqlite = { version = "0.39.0", default-features = false, features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
snow = { version = "=0.10.0", default-features = false, features = [
  "default-resolver",
  "std",
  "use-blake2",
  "use-chacha20poly1305",
  "use-curve25519",
  "use-getrandom",
] }
socket2 = "=0.6.0"
tauri = { version = "2.11", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2.7"
tauri-plugin-global-shortcut = "2"
tauri-plugin-mcp-bridge = "0.11.2"
tauri-plugin-opener = "2.5"
tauri-plugin-store = "2.4"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "=0.7.18", features = ["rt"] }
unicode-normalization = "=0.1.25"
xcap = "0.9.4"
zeroize = { version = "=1.9.0", features = ["derive"] }

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2.4"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "=0.61.2", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_Security",
  "Win32_System_Console",
  "Win32_System_JobObjects",
  "Win32_System_SystemInformation",
  "Win32_System_Threading",
  "Win32_UI_Shell",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
